change token generation
