# users/swagger.yaml
@@ -110,7 +110,7 @@ paths:
           description: Missing or invalid content type.
         500:
           $ref: "#/responses/ServiceError"
-  /passwd/res-req:
+  /password/reset:
     post:
       summary: User password reset request
       description: |
@@ -136,8 +136,8 @@ paths:
           description: Missing or invalid content type.
         500:
           $ref: "#/responses/ServiceError"
-  /passwd/reset:
-    post:
+  /password:
+    patch:
       summary: User password reset endpoint
       description: |
         When user gets reset token posting a new password along to this endpoint will change password.
